# getWinrate_and_friends

./: .gitignore  CMakeLists.txt  Gemfile  README.md  beastWebsocket.cpp  constant.h  constants.py  createFileWithLinks.h  downloadFiles.cpp  example_credentials.rb  getResultsOfOpenStakes.cpp  get_percentage.py  inbar_class.rb  main.cpp  main.py  main.rb  query_variants.py  rubyPart.cpp  rubyPart.h  sqlFunctions.cpp  stakeWithCurl.cpp  stakeWithCurl.h  stake_info.rb  telegram.rb  tg_bot.py  utility_code.py  variables.rb
checkHistory/: constants.h  sqlFunctions.h  stakeFromDB.cpp  stakeFromDB.h
clicker/: .gitignore  Gemfile  README.md  example_credentials.rb  inbar_class.rb  main.rb  setup.sh  telegram.rb
collectStats/: CMakeLists.txt  commandsForDb.cpp  commandsForDb.h  copyDatabase.cpp  copyDatabase.h  daysToCheck.cpp  daysToCheck.h  main.cpp
getWinrate/: beastWebSocket.h  checkOpenStakes.cpp  checkOpenStakes.h  cleanDb.cpp  cleanDb.h  createFileWithLinks.cpp  downloadFiles.h  getResultsOfOpenStakes.h  huntForSignals.cpp  huntForSignals.h  pythonBinaryApi.cpp  pythonBinaryApi.h  root_certificates.hpp
print_percentage/: README.md  constants.py  main.py  query_variants.py  utility_code.py
